force-app/main/default/objects/AA_Employee__c/AA_Employee__c.object-meta.xml
<CustomObject>
    <label>AA Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>