force-app/main/default/objects/AA_Employee__c/fields/Available_In_Public_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Public_Agenda__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True to make this employee available to receive appointments from the public agenda</description>
    <inlineHelpText>True to make this employee available to receive appointments from the public agenda</inlineHelpText>
    <label>Available In Public Agenda</label>
    <type>Checkbox</type>
</CustomField>