force-app/main/default/objects/AA_Employee__c/fields/Business_Branch__c.field-meta.xml
<CustomField>
    <fullName>Business_Branch__c</fullName>
    <label>Business Branch</label>
    <referenceTo>AA_Business_Branch__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>