force-app/main/default/objects/AA_Employee__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Hexadecimal color including the # character, example: #E5DFD5</description>
    <inlineHelpText>Hexadecimal color including the # character, example: #E5DFD5</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>