force-app/main/default/objects/AA_Employee__c/fields/Is_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To know if this employee is a salon&apos;s admin. In that case this employee can see more tnat data rather that specific data assigned</description>
    <inlineHelpText>To know if this employee is a salon&apos;s admin. In that case this employee can see more tnat data rather that specific data assigned</inlineHelpText>
    <label>Is Admin</label>
    <type>Checkbox</type>
</CustomField>