force-app/main/default/objects/AA_Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User used for login</description>
    <inlineHelpText>User used for login</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AA_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>