force-app/main/default/objects/AA_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Branch__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Is_Admin__c</columns>
    <columns>User__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_Active__c</columns>
    <columns>Color__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>