force-app/main/default/objects/AA_Employee__c/listViews/Silvina_Unas.listView-meta.xml
<ListView>
    <fullName>Silvina_Unas</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>User__c</columns>
    <columns>Is_Admin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas</label>
</ListView>